--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -142,6 +142,12 @@
             font-style: italic;
             margin-bottom: .5em;
         }
+
+        .checkmark {
+            height: 1.5em;
+            width: 1.5em;
+            color: $green;
+        }
     }
 
     .attestation-block {
