Fixing styling on selected readonly card

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -72,7 +72,7 @@
       color: $dark-grey;
       border: 2px solid $dark-grey;
 
-      &[selected] {
+      &.selected {
         border: 2px solid $blue;
         background-color: $light-grey;
         color: $dark-grey;
