--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map.scss
@@ -12,4 +12,5 @@
 @import "map_modules/upload_samples";
 
 @import "../../node_modules/react-redux-toastr/src/styles/index";
+@import "../../node_modules/react-selectize/themes/index.css";
 @import "map_modules/toastr_overrides";
