--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -362,11 +362,19 @@
       pointer-events: none;
     }
 
-    textarea.form-input-multi-add {
+    input.form-input-multi-add {
       border: none;
       height: 1.5rem;
       min-height: 1rem;
+      margin-top: 0.3rem;
       flex: 1;
+    }
+
+    .multi-add-preview-dropdown {
+      padding: 1px;
+      background-color: lightblue;
+      font-size: 14px;
+      cursor: pointer;
     }
   }
 }
