Remove special styling for detail-value-name and detail-value-email classes in the tables

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -136,14 +136,11 @@
         }
 
         .detail-value-name {
-            font-size: 1.1em;
-            font-weight: bold;
+            margin-top: .5rem;
         }
 
         .detail-value-email {
-            font-size: .9em;
-            font-style: italic;
-            margin-bottom: .5em;
+            margin-bottom: .5rem;
         }
 
         .checkmark {
