--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -53,7 +53,7 @@
         margin-bottom: 2.5rem;
 
         .detail-title {
-            margin: 0 0 1em;
+            margin: 0;
             font-size: 1.25em;
             font-weight: bold;
         }
