Remove pointer cursor on the warning and error icons

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -7,6 +7,10 @@
     background-color: $white;
     overflow: auto;
 
+    .title .action-icon-container-inline {
+        cursor: default;
+    }
+
     &.review-approaching {
         border-left: 10px solid $orange;
 
