System admin modals

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/system-admin/detail-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/system-admin/detail-panel.scss
@@ -41,6 +41,11 @@
                         padding: 0;
                     }
                 }
+
+                .systemAdminButton {
+                  margin: 0.75em;
+                  padding: 1em !important;
+                }
             }
 
             .nested-list-section {
