Add styling to support "expanding" the row for a file or folder

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -60,6 +60,10 @@
     tr {
         border-bottom: 1px solid $grey;
 
+        &.expanded {
+            border-bottom: none;
+        }
+
         td {
             padding: .5em 0;
         }
