Tweak styling to enable multiple icons in the actions column

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -38,6 +38,7 @@
     }
 
     .content-type-icon,
+    .action-icon,
     .menu-icon {
         height: 1.25em;
         width: 1.25em;
@@ -54,7 +55,7 @@
     }
 
     .col-actions {
-        width: 5em;
+        width: 7em;
     }
 
     tr {
