--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
@@ -2,9 +2,10 @@
 
 .popup-container {
     position: relative;
+    display: inline;
     width: 100%;
     height: 100%;
-    padding: 0;
+    padding: 0 0 0 .5em;
     margin: 0;
 
     .menu-button {
