Add some styling the the description text

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -68,6 +68,11 @@
         td {
             padding: .5em 0;
         }
+
+        .file-drop-content-description {
+            padding: 0 1em .5em 2em;
+            font-style: italic;
+        }
     }
 
     .folder,
