Preserve line breaks in the content descriptions

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -72,6 +72,7 @@
         .file-drop-content-description {
             padding: 0 1em .5em 2em;
             font-style: italic;
+            white-space: pre-line;
         }
     }
 
