Add the Add File/Add Folder buttons to the bottom of the folder content component

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -74,6 +74,15 @@
             font-style: italic;
             white-space: pre-line;
         }
+
+        &.add-row {
+            color: $green;
+            cursor: pointer;
+
+            &:hover {
+                color: darken( $green, 10% );
+            }
+        }
     }
 
     .folder,
