Add new folders while in move mode

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -179,3 +179,9 @@ table {
     margin: 0;
     padding: 0 !important;
 }
+
+.move-item-new-folder-spinner {
+    margin-left: 0.25rem;
+    width: 1.5rem;
+    height: 1.5rem;
+}
