--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -37,9 +37,7 @@
         width: 2em;
     }
 
-    .content-type-icon,
-    .action-icon,
-    .menu-icon {
+    .content-type-icon {
         height: 1.25em;
         width: 1.25em;
     }
