Add some coloring to the action icons

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -145,7 +145,11 @@ table {
         font-size: inherit;
         flex: 0 0 auto;
     }
-    
+
+    [title="Cancel Upload"] svg {
+        color: $red;
+    }
+
     .action-icon-container-inline {
         flex: 0 0 auto;
 
