Added loading indicator when adding a new file

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -119,4 +119,10 @@
     .progress-bars {
         margin-bottom: .5em;
     }
+
+    .spinner {
+        width: 1.5rem;
+        height: 1.5rem;
+        float: right;
+    }
 }
