--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -189,7 +189,7 @@ table {
         margin-bottom: 0;
 
         .breadcrumb-link {
-            color: blue;
+            color: $blue;
             cursor: pointer;
         }
 
