--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_variables.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_variables.scss
@@ -7,6 +7,7 @@ $green:         #42CC42;
 $red:           #FF2E00;
 $orange:        #F89F06;
 $white:         #FFFFFF;
+$off-white:     #F5F5F5;
 $off-white:     #F1F4F4;
 $light-grey:    #DFE8E8;
 $grey:          #AAAAAA;
