--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
@@ -9,7 +9,7 @@
     margin: 0;
 
     &.open {
-        background-color: $off-white;
+        background-color: $light-grey;
     }
 
     .menu-button {
@@ -25,8 +25,8 @@
         position: absolute;
         right: 2em;
         top: 0;
-        background-color: $white;
-        border: 1px solid $off-white;
+        background-color: $off-white;
+        border: 1px solid $light-grey;
         padding: 0;
         cursor: pointer;
         z-index: 999;
@@ -51,7 +51,7 @@
 
                 &:hover {
                     font-weight: bold;
-                    background-color: $off-white;
+                    background-color: $light-grey;
                 }
 
                 &.warning {
