--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
@@ -35,6 +35,7 @@
             list-style: none;
             margin: 0;
             padding: 0;
+            width: 11em;
 
             li,
             a {
