Make sure the Create Folder icon is green

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -142,7 +142,8 @@
             width: 1.75em;
         }
 
-        &[title="Submit Changes"] svg {
+        &[title="Submit Changes"] svg,
+        &[title="Create Folder"] svg {
             color: $green;
         }
 
