--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/popup-menu.scss
@@ -2,18 +2,19 @@
 
 .popup-container {
     position: relative;
-    display: inline;
-    width: 7em;
-    height: 100%;
-    padding: .5em;
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    padding: 0;
     margin: 0;
 
-    &.open {
-        background-color: $light-grey;
+    &.open .menu-button {
+        background-color: $off-white;
     }
 
     .menu-button {
         cursor: pointer;
+        padding: 0 0 .3em .2em;
 
         .menu-icon {
             height: 1.25em;
@@ -23,7 +24,7 @@
 
     .popup-menu {
         position: absolute;
-        right: 2em;
+        right: 1.5em;
         top: 0;
         background-color: $off-white;
         border: 1px solid $light-grey;
