Add color to create/cancel buttons in create folder interface of move modal

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -245,6 +245,14 @@ table {
                 width: 1.5rem;
                 height: 1.5rem;
             }
+
+            [title="Create Folder"] svg {
+                color: $green;
+            }
+
+            [title="Discard Changes"] svg {
+                color: $red;
+            }
         }
     }
 }
