Showing disabled accounts in ClientAdmin

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -229,6 +229,12 @@
           display: inline-block;
           margin: 0;
           width: 75%;
+
+          .warning {
+            color: $red;
+            font-style: italic;
+            font-size: 14px;
+          }
         }
       }
 
