--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -109,7 +109,7 @@
         .detail-value-disabled {
             font-size: .875rem;
             color: $red;
-            font-style: italic; 
+            font-style: italic;
         }
 
         .detail-value-near-disabled {
@@ -185,6 +185,21 @@
             height: 1.5em;
             width: 1.5em;
             color: $green;
+        }
+
+        .file-drop-user-icon {
+            display: inline-flex;
+            width: 1.25em;
+            height: 1.25em;
+            margin-right: 0.5em;
+
+            &.disabled-warning-icon {
+                color: $red;
+            }
+
+            &.near-disabled-warning-icon {
+                color: $orange;
+            }
         }
     }
 
