--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -131,6 +131,18 @@
             display: block;
             background-color: $red;
         }
+
+        &.border-default {
+            border: 2px solid $charcoal;
+        }
+
+        &.border-informational {
+            border: 2px solid $orange;
+        }
+
+        &.border-error {
+            border: 2px solid $red;
+        }
     }
 
     .card-body-container {
@@ -140,8 +152,19 @@
         justify-content: flex-start;
         align-content: stretch;
         background-color: $white;
-        border: 2px solid $charcoal;
         border-radius: .25em;
+
+        &.border-default {
+            border: 2px solid $charcoal;
+        }
+
+        &.border-informational {
+            border: 2px solid $orange;
+        }
+
+        &.border-error {
+            border: 2px solid $red;
+        }
 
         &.locked {
             border-color: $blue;
@@ -344,15 +367,13 @@
             }
 
             .corner-icon {
-                position: absolute;
-                top: 0.25em;
-                right: 4%;
+                margin-right: 0.25em;
 
                 svg {
-                    width: 1.3em;
-                    height: 1.3em;
+                    width: 1em;
+                    height: 1em;
                 }
-                
+
                 &.warning {
                     color: $orange;
                 }
