--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Footer.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
         <ul id="footer-nav" class="list-style-none display-inline-block padding-0 margin-bottom-1em center-content-for-laptop-up">
             <li class="hide-on-tablet-down"><a href="http://www.milliman.com/" target="_blank">Milliman</a></li>
             <li class="hide-on-tablet-down"><a href="https://www.prmanalytics.com" target="_blank">PRM Analytics</a></li>
-            <li><a href="http://us.milliman.com/legal/terms/" target="_blank">Terms of Use</a></li>
+            <li><a href="/Account/UserAgreementReadOnly" target="_blank">User Agreement</a></li>
             <li><a href="http://us.milliman.com/legal/privacy/" target="_blank">Privacy Policy</a></li>
             <li><a href="http://us.milliman.com/legal/copyright/" target="_blank">Copyright</a></li>
         </ul>
