--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -520,6 +520,7 @@
     -webkit-transition: all 0.3s ease;
     position: relative;
     top: -5em;
+    text-align: left;
 
     &.vertical-push {
         position: relative;
