--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
@@ -62,6 +62,10 @@
     .button-container {
         padding-top: 1em;
         text-align: right;
+
+        &.no-padding-top {
+            padding-top: 0em;
+        }
     }
 
     .content-frame {
