address requested changes

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -76,6 +76,11 @@
                 font-size: .75em;
                 white-space: pre-wrap;
             }
+
+            .content-card-caption {
+                font-size: 0.60em;
+                color: lightgray;
+            }
         }
 
         .secondary-actions {
