--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
@@ -29,18 +29,19 @@
 	        // Embed configuration used to describe what and how to embed.
 	        // This object is used when calling powerbi.embed.
 	        // This also includes settings and options such as filters.
-	        // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
-	        var config = {
+          // You can find more information at https://github.com/Microsoft/PowerBI-JavaScript/wiki/Embed-Configuration-Details.
+          var config = {
 		        type: 'report',
 		        tokenType: models.TokenType.Embed,
 		        accessToken: "@Model.EmbedToken",
 		        embedUrl: "@Html.Raw(Model.EmbedUrl)",
-		        id: "@Model.ReportId",
-		        permissions: models.Permissions.All,
+            id: "@Model.ReportId",
+            permissions: models.Permissions.All,
+            viewMode: @Json.Serialize(@Model.EditableEnabled) ? models.ViewMode.Edit : models.ViewMode.View,
 		        settings: {
 			        filterPaneEnabled: @Json.Serialize(Model.FilterPaneEnabled),
 			        navContentPaneEnabled: @Json.Serialize(Model.NavigationPaneEnabled)
-		        }
+		        },
 	        };
 
 	        // Get a reference to the embedded report HTML element
