Left align content card caption text

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -78,6 +78,7 @@
             }
 
             .content-card-caption {
+                text-align: left;
                 font-size: 0.70em;
                 color: gray;
             }
