--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -3,11 +3,11 @@
 
 .iframe-container {
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 5.5rem);
     width: 100%;
 
     iframe, object {
-        height: 100vh;
+        height: calc(100vh - 5.5rem);
         width: 100%;
         overflow: auto;
         border: none;
