--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -7,7 +7,7 @@
     width: 100%;
 
     iframe, object {
-        height: calc(100vh - 5.5rem);
+        height: 100vh;
         width: 100%;
         overflow: auto;
         border: none;
