--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -7,7 +7,7 @@
     width: 100%;
 
     iframe, object {
-        height: 96vh;
+        height: calc(100% + 2.75rem);
         width: 100%;
         overflow: auto;
         border: none;
