--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
@@ -8,8 +8,15 @@
     position: absolute;
     top: 0;
     padding: 0.5vmin;
-    background-color: gold;
-    width: calc(100% - 4.5rem);
+    width: calc(100% - 6.5vmin);
+
+    &.pre {
+        background-color: $orange;
+    }
+
+    &.post {
+        background-color: $red;
+    }
 
     .close-banner-icon {
         float: right;
