grammar and cursor fix

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -95,6 +95,11 @@
         .detail-label {
             font-size: .75rem;
             color: $dark-grey;
+            
+            .action-icon-container,
+            .action-icon-container-inline{
+                cursor:default;
+            }            
         }
 
         .detail-value-name {
