added selection group highlight and icon

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -164,6 +164,15 @@
             border-bottom: 1px solid $grey;
         }
 
+        .table-row-divider-suspended {
+            border-bottom: 1px solid $grey;
+            color: $red;
+
+            .action-icon {
+                color: $red;
+            }
+        }
+
         .center-text {
             text-align: center;
         }
