CSS change to accomodate new name

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
@@ -162,6 +162,7 @@ nav {
             font-size: 2vmin;
             font-weight: bold;
             order: 1;
+            width: 20vmin;
         }
 
         .nav-element-icon {
